--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style type="text/css">code{white-space: pre;}</style>
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="German Feierherd's webpage">
-  <meta name="keywords" content="German Feierherd, Political Science, Yale">
+  <meta name="keywords" content="German Feierherd, Political Science, UdeSA">
  </head>
 
 <body>
@@ -21,7 +21,7 @@
 
 <p>
 <h1 id="german-feierherd" style="text-align:left"><b> Germ&#225n Feierherd </b> </h1>
-Assistant Professor (profesor adjunto de tiempo completo), <a href=https://www.udesa.edu.ar" title="UDESA Uiversity">Universidad de San Andrés</a>, Buenos Aires, Argentina.</br>
+Assistant Professor (profesor adjunto de tiempo completo), <a href=https://www.udesa.edu.ar" title="UdeSA Uiversity">Universidad de San Andrés</a>, Buenos Aires, Argentina.</br>
 <p/>
 
 <p>
@@ -47,14 +47,14 @@ For more information, see my <a href="Feierherd CV.pdf">CV</a>.
 The left in Latin America came to office, in the early 2000s, at a time when state-led models of economic development were collapsing and when the working classes increasingly found themselves in informal-sector jobs: without contracts or access to social security or other regulations and protections. My book manuscript, <i>The Left's Dilemma: Party Strategies and Informal Labor in Developing Economies,</i>  provides insights into how left-leaning parties stitch together a broad lower-class electoral coalition, one that includes both informal- and formal-sector workers, whose preferences are in some ways at odds. A summary of the book is available <a href="http://feierherd.github.io/Book outline Oct 17.pdf" target="_blank">here</a>.
 <p/>
 
-<h1>Peer-Reviewed and R&R Articles</h1>
+<h1>Peer-Reviewed Articles</h1>
 
 <p>
-Sharing the Costs: Party Brands and Incumbency Spillovers in Brazil. Revise and Resubmit at <i>The Journal of Politcs</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf" target="_blank">abstract</a>]
+How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil. Forthcoming at <i>The Journal of Politcs</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf" target="_blank">abstract</a>]
 <a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">
 <p/>
 <p>
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] 
+Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank">local PDF</a>]
 <p/>
 <p>
 <a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954" target="_blank">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
@@ -111,8 +111,8 @@ Lula and the Partido dos Trabalhadores adaptation process (“Lula y el proceso 
 
 <div class="column right">
 
-<a href="Feierherd CV.pdf">CV</a><br> 
-<a href="mailto: german.feierherd@yale.edu">Mail</a><br> 
+<a href="Feierherd CV_short.pdf">CV</a><br> 
+<a href="mailto: gfeierherd@udesa.edu.ar">Mail</a><br> 
 <a href="https://github.com/feierherd">Github</a><br> 
 <a href="https://scholar.google.com/citations?user=baYNz4QAAAAJ&hl=en&oi=sra">Google Scholar</a>
 <hr>
