--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ I received my PhD in Political Science from Yale University in December 2016. Du
 <p/>
 
 <p>
-For more information, see my <a href="Feierherd CV.pdf">CV</a>. 
+For more information, see my <a href="Feierherd CV_short.pdf">CV</a>. 
 <p/>
 
 
