--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ At Universidad Torcuato Di Tella:
 <div>
 
 <p class="footer">
-Last updated: June 2018<br /> 
+Last updated: 01/2019<br /> 
 </p>
 
 </div> 
