--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@ I received my PhD in Political Science from Yale University in December 2016. Du
 <h1>Peer-Reviewed Articles</h1>
 
 <p>
-How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil. Forthcoming at <i>The Journal of Politics</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf" target="_blank">abstract</a>]
-<a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">
+<a href="https://www.journals.uchicago.edu/doi/abs/10.1086/705742?journalCode=jop" target="_blank"> How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil.</a> Forthcoming at <i>The Journal of Politics</i> [<a href="http://feierherd.github.io/Sharingthecosts.pdf" target="_blank">abstract</a>]
 <p/>
+
+
 <p>
-Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank">local PDF</a>]
+<a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank">local PDF</a>]
 <p/>
 <p>
 <a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954" target="_blank">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
@@ -100,7 +101,7 @@ Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Arg
 
 
 <p>
-<a href="https://docs.google.com/document/d/e/2PACX-1vQxrx1F5e32foqKLa729rdDo5D3ghX_ukJMMo-h57_N9aEabXXW1THbLn5-u87NBrwKZF1KsnrqMqET/pub">“Causas de la distribución desigual de causas enla Cámara Federal porteña” </a> (with G. Tuñón), August, 2018
+<a href="https://docs.google.com/document/d/e/2PACX-1vQxrx1F5e32foqKLa729rdDo5D3ghX_ukJMMo-h57_N9aEabXXW1THbLn5-u87NBrwKZF1KsnrqMqET/pub">“Causas de la distribución desigual de causas en la Cámara Federal porteña” </a> (with G. Tuñón), August 2018
 <p/>
 
 
@@ -118,7 +119,8 @@ Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Arg
 <p/>
 
 <p>
-From the Hegemonic to the Scrambled Stalemate, CLACS Working Paper, Brown University, May 2014
+
+<a href=" https://watson.brown.edu/clacs/files/clacs/imce/publications/Argentina%20Conference%20_4_0.pdf" target="_blank">From the Hegemonic to the Scrambled Stalemate</a>, CLACS Working Paper, Brown University, May 2014
 <p/>
 
 <p> 
