--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 <h1>Peer-Reviewed Articles</h1>
 
 <p>
-<a href="https://www.journals.uchicago.edu/doi/10.1086/705742" target="_blank"> How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil.</a> Forthcoming at <i>The Journal of Politics</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="how_mayors_hurt_their_presidential_ticket.pdf" target="_blank">local PDF</a>]
+Courting Informal Workers: Exclusion, Forbearance, and the Left. Forthcoming at the <i>American Journal of Political Science</i>
 <p/>
 
+<p>
+<a href="https://www.journals.uchicago.edu/doi/10.1086/705742" target="_blank"> How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil,</a> <i>The Journal of Politics</i>, 2020. [<a href="how_mayors_hurt_their_presidential_ticket.pdf" target="_blank">local PDF</a>]
+<p/>
 
 <p>
-<a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">Do the Wealthy Oppose Redistribution? Public Price Shocks and Redistributive Preferences in Buenos Aires</a> (with L. Schiumerini and S. Stokes). Forthcoming at the <i>British Journal of Political Science</i> [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank">local PDF</a>]
+<a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank">When Do the Wealthy Support Redistribution? Inequality Aversion in Buenos Aires</a>, with L. Schiumerini and S. Stokes, <i>British Journal of Political Science</i>, 2020 [<a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank">replication files</a>] [<a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank">local PDF</a>]
 <p/>
 <p>
-<a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954" target="_blank">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a> (“El Presidencialismo Argentino: de la Crisis a la Recomposicion Actual, 2003–2007”), with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 54, April 2010 
+<a href="http://revistas.usal.es/index.php/1130-2887/article/view/6954" target="_blank">Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2003–2007</a>, with N. Cherny and M. Novaro, in <i>America Latina Hoy</i>, 2010 
 <p/>
 
 
@@ -80,23 +83,19 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 <h1>Work in Progress</h1>
 
 <p>
-Does the Left Breed Economic Informality? Party Strategies and Selective Enforcement in Brazil (<i>Revise & Resubmit</i>) 
-<p/>
-
-<p>
 Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents (runner-up in the Best Paper Prize at <a href="http://redeconomiapoliticaamlat.com" target="_blank">REPAL</a>  2017)
 <p/>
 
-<p>
+<!-- <p>
 Paying Not to Vote: Pocketbook Considerations and the Shape of the Electorate (with G. Julcarimna and G. Tuñón)
 <p/>
-
+ -->
 <p>
 Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Argentine Courts (with  G. Tuñón)
 <p/>
 
 <p>
-Rural Resistance in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) 
+Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) 
 <p/>
 
 
