--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Courting Informal Workers: Exclusion, Forbearance, and the Left. Forthcoming at 
 <p/>
 
 <p>
-<a href="https://www.journals.uchicago.edu/doi/10.1086/705742" target="_blank"> How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil,</a> <i>The Journal of Politics</i>, 2020. [<a href="how_mayors_hurt_their_presidential_ticket.pdf" target="_blank">local PDF</a>]
+<a href="https://www.journals.uchicago.edu/doi/10.1086/705742" target="_blank"> How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillovers in Brazil,</a> <i>The Journal of Politics</i>, 2020 [<a href="how_mayors_hurt_their_presidential_ticket.pdf" target="_blank">local PDF</a>]
 <p/>
 
 <p>
