--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accid
 Paying Not to Vote: Pocketbook Considerations and the Shape of the Electorate (with G. Julcarimna and G. Tuñón)
 <p/>
  -->
+
 <p>
 Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Argentine Courts (with  G. Tuñón)
 <p/>
@@ -97,6 +98,13 @@ Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Arg
 <p>
 Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) 
 <p/>
+
+<p>
+
+The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin America (with Andrés Schipani)
+
+<p/>
+
 
 
 <h1> Other Publications </h1>
