--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@ The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin
 
 <h1> Other Publications </h1>
 
+
+<p> 
+Labor Informality and Its Political Consequences in Latin America (with A. Baker, S. Berens, and I. Menéndez González), <i>Insight Series</i>, No. 144, 2020 [<a href="https://www.vanderbilt.edu/lapop/insights/IO944en.pdf" target="_blank">English</a>] [<a href="https://www.vanderbilt.edu/lapop/insights/IO944es.pdf" target="_blank">Español</a>]
+<p/>
+
+
+
 <p>
 <a href="http://www.onpe.gob.pe/modEducacion/Publicaciones/sanciones-multas-abstencionismo.pdf">"Sanciones, multas y abstencionismo electoral en el Perú. Tres estudios sobre participación electoral y voto obligatorio"</a> (with C. Jaramillo Huamán, R. Rebata Delgado, G. Julcarima, and G. Tuñón), <i>Oficina Nacional de Procesos Electorales</i>, 2019
 <p/>
@@ -118,11 +125,9 @@ The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin
 <p/>
 
 
-
 <p>
 <a href="https://docs.google.com/document/d/e/2PACX-1vQxrx1F5e32foqKLa729rdDo5D3ghX_ukJMMo-h57_N9aEabXXW1THbLn5-u87NBrwKZF1KsnrqMqET/pub">“Causas de la distribución desigual de causas en la Cámara Federal porteña” </a> (with G. Tuñón), August 2018
 <p/>
-
 
 
 <p>
@@ -147,7 +152,7 @@ El Tamaño de las Coaliciones Legislativas en Argentina (1983-2008), in A. Musta
 <p/>
 
 <p>
-Lula y el proceso de adaptación del PT a la hora de gobernar with V. Palermo, in <i>Revista Argentina de Ciencia Politica</i>, 9/10, 2006 
+Lula y el proceso de adaptación del PT a la hora de gobernar (with V. Palermo), in <i>Revista Argentina de Ciencia Politica</i>, 9/10, 2006 
 </p>
 
 
