--- a/index.html
+++ b/index.html
@@ -79,17 +79,16 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 
 
 
-<h1>Work in Progress</h1>
+<!--<h1>Work in Progress</h1>
 
 <p>
 Electoral Accountability with Myopic Voters: Evidence from Fatal Workplace Accidents (runner-up in the Best Paper Prize at <a href="http://redeconomiapoliticaamlat.com" target="_blank">REPAL</a>  2017)
 <p/>
 
-<!-- <p>
+<p>
 Paying Not to Vote: Pocketbook Considerations and the Shape of the Electorate (with G. Julcarimna and G. Tuñón)
 <p/>
- -->
-
+ 
 <p>
 Corruption in the Courts: The Strategic Promotion of Corruption Cases in the Argentine Courts (with  G. Tuñón)
 <p/>
@@ -103,6 +102,7 @@ Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Bo
 The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin America (with Andrés Schipani)
 
 <p/>
+ -->
 
 
 
