--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75172705-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-75172705-1');
+</script>
+
+
   <meta charset="utf-8">
   <meta name="author" content="German Feierherd">
   <title>German Feierherd</title>
@@ -107,6 +118,11 @@ The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin
 
 
 <h1> Other Publications </h1>
+
+<p> 
+<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf">The Pink Tide and Inequality in Latin America</a> 
+ (with P. Larroulet, W. Long, and N. Lustig), <i>CEQ Working Paper</i>, No. 105, Commitment to Equity Institute, Tulane University, 2021 
+<p/>
 
 
 <p> 
