--- a/index.html
+++ b/index.html
@@ -182,14 +182,16 @@ Lula y el proceso de adaptación del PT a la hora de gobernar (with V. Palermo),
 <h1> Teaching </h1>
 
 <p>
-At UdeSA, I teach the following courses: 
-</p>
-
-<ul>
-  <li>Economía Política del Desarrollo (graduate level) </li>
-  <li>Sistemática de la Ciencia Política (undergraduate Level)</li>
-  <li>Diseño de Investigación (undergraduate level)</li>
+  <ul>
+<li> Universidad de San Andres, Senior Thesis Seminar (undergraduate level, 2021-present)</li>
+<li> Universidad de San Andres, Research Design (undergraduate level, 2019, 2020)</li>
+<li> Universidad de San Andres, Topics in Political Economy (undergraduate level, 2018-present)</li>
+<li> Universidad de San Andres, Political Economy of Development (MA in Public Policy, 2018-present)</li>
+<li> Universidad de San Andres, Argentine Political Economy (MA in Economics, 2021-present)  </li>
+<li> Universidad de San Andres, Evidence-based Public Policies  (UdeSA, short course for the Programa de Gobernabilidad, 2018-present) </li>
+<li>  New York University - Buenos Aires, Special Topics in Political Institutions and Economic and Social Policy (with M. Tommasi, 2019, 2020)</li>
 </ul>
+</p>
 <!-- 
 <p>
 At Yale, I served as a teaching fellow for the following courses: 
