--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 <body>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+
 <div class="row", class='center'>
 
 <div class="column left">
