--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 <h1>Peer-Reviewed Articles</h1>
 
 <p>
+Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru, with G. Tuñón and G. Julcarimna-Alvarez, <i>Electoral Studies</i>, forthcoming  
+<p id="one">
+<a href="monetary_cost.pdf" target="_blank"><button class="button button3">local PDF</button></a>
+</p>
+
+
+
+<p>
 Courting Informal Workers: Exclusion, Forbearance, and the Left, <i>American Journal of Political Science</i>, 2020 
 <p id="one">
 <a href="https://doi.org/10.1111/ajps.12576" target="_blank" class="button button1">
@@ -105,9 +113,6 @@ Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2
 Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) (Revise & Resubmit)
 <p/>
 
-<p>
-Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru (with G. Julcarimna and G. Tuñón) (Revise & Resubmit)
-<p/>
 
 <p>
 Witch Hunts? Electoral Cycles and the Judicialization of Corruption in Argentina (with E. Gonzalez-Ocantos and G. Tuñón) (Revise & Resubmit)
