--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 <h1>Peer-Reviewed Articles</h1>
 
 <p>
-Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru, with G. Tuñón and G. Julcarimna-Alvarez, <i>Electoral Studies</i>, forthcoming  
+Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru, with G. Tuñón and G. Julcarimna-Alvarez, <i>Electoral Studies</i>, Volume 75, February 2022
 <p id="one">
+<a href="https://www.sciencedirect.com/science/article/pii/S026137942100130X?dgcid=author" target="_blank"><button class="button button2">replication files</button></a>
 <a href="monetary_cost.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 </p>
 
@@ -271,7 +272,7 @@ At Universidad Torcuato Di Tella:
 <div>
 
 <p class="footer">
-Last updated: 06/2021<br /> 
+Last updated: 02/2022<br /> 
 </p>
 
 </div> 
