--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 <p>
 Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru, with G. Tuñón and G. Julcarimna-Alvarez, <i>Electoral Studies</i>, Volume 75, February 2022
 <p id="one">
-<a href="https://www.sciencedirect.com/science/article/pii/S026137942100130X?dgcid=author" target="_blank"><button class="button button2">replication files</button></a>
+<a href="https://www.sciencedirect.com/science/article/pii/S026137942100130X?dgcid=author" target="_blank" class="button button1">
 <a href="monetary_cost.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 </p>
 
