--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@ The New Class Divide: Dual Labor Markets and Redistributive Preferences in Latin
 
 
 <h1> Other Publications </h1>
+
+<p> 
+The Partisan Paradox of Informal Employment, <i>The Political Economist</i>, Vol. XVI, N. 3, 2021
+<p id="one">
+<a href="https://penewsletter.org/assets/pdf_issues/S2021.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
+<p/>
+
+
 <p> 
 Labor Informality and Its Political Consequences in Latin America (with A. Baker, S. Berens, and I. Menéndez González), <i>Insight Series</i>, No. 144, 2020 
 <p id="one">
