--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
 
 <!-- <img src="avatar.png" alt="" style="float:center;width:285px;height:285px; margin-right:15px; margin-bottom:5px"> -->
 
+  
+<hr> 
+  
+<br>
+
+Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina.</br>
+
+
+<p>
+Mis investigaciones se enfocan, teórica y empíricamente, en la economía política de las democracias en desarrollo, con énfasis en los procesos de rendición de cuentas y las causas y consecuencias políticas de la desigualdad económica.
+<p/>
+
+<p>
+Recibí mi doctorado en Ciencia Política (con distinción) de la Universidad de Yale en 2017. Antes de regresar a Argentina, fui Investigador Postdoctoral en la Universidad de Duke.
+<p/>
+
+<p>
+Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu title="UC">Center for the Politics of Developmen</a></em> en UC Berkeley y el <a href=https:// www.udesa.edu.ar/centro-de-estudios-cedh
+  title="UC">Centro de Estudios para el Desarrollo Humano</a> en San Andrés.
+<p/>
+  
+  
+  
 </div>
 
 
