--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina (with E. Gonz
 
 
 <p>
-The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Revise & Resubmit)
+The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Conditional Accepted, <i>Latin American Politics & Society</i>)
 <p id="one">
 <a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
 <p/>
