--- a/index.html
+++ b/index.html
@@ -139,7 +139,14 @@ Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2
 <h1>Work Under Review / Trabajos Bajo Revisión </h1>
 
 <p>
-Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) (Revise & Resubmit)
+The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Conditionally Accepted, <i>Latin American Politics & Society</i>)
+<p id="one">
+<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
+<p/>
+
+  
+<p>
+Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) 
 <p/>
 
 
@@ -147,12 +154,6 @@ Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Bo
 Witch Hunts? Electoral Cycles and Corruption Lawsuits in Argentina (with E. Gonzalez-Ocantos and G. Tuñón) (Revise & Resubmit)
 <p/>
 
-
-<p>
-The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Conditional Accepted, <i>Latin American Politics & Society</i>)
-<p id="one">
-<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
-<p/>
 
 
 <!-- <p>
