--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Recibí mi doctorado en Ciencia Política (con distinción) de la Universidad de
 <p/>
 
 <p>
-Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu title="UC">Center for the Politics of Developmen</a></em> en UC Berkeley y el <a href=https:// www.udesa.edu.ar/centro-de-estudios-cedh
+Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu title="UC">Center for the Politics of Development</a></em> en UC Berkeley y el <a href=https:// www.udesa.edu.ar/centro-de-estudios-cedh
   title="UC">Centro de Estudios para el Desarrollo Humano</a> en San Andrés.
 <p/>
   
@@ -85,7 +85,7 @@ Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu ti
 
 <div class="column middle">
 
-<h1>Peer-Reviewed Articles / Trabajos Revisados por Pares</h1>
+<h1>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
 When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming
@@ -136,7 +136,7 @@ Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2
 
 <br>
 
-<h1>Work Under Review / Trabajos Bajo Revisión </h1>
+<h1> Under Review / Bajo Revisión </h1>
 
 <p>
 The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Conditionally Accepted, <i>Latin American Politics & Society</i>)
