--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo en la 
 
 
 <p>
-Mis investigaciones se enfocan, teórica y empíricamente, en la economía política de las democracias en desarrollo, con énfasis en los procesos de rendición de cuentas y las causas y consecuencias políticas de la desigualdad económica.
+Mis investigaciones se enfocan en la economía política de las democracias en desarrollo, con énfasis en los procesos de rendición de cuentas y las causas y consecuencias políticas de la desigualdad económica.
 <p/>
 
 <p>
