--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@ Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu ti
 <h1>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
+The Pink Tide and Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, forthcoming
+<p id="one">
+<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
+<p/>
+
+  
+<p>
 When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming
 <p id="one">
 <!-- <a href="https://www.sciencedirect.com/science/article/pii/S026137942100130X?dgcid=author" target="_blank" class="button button1"> <button class="button button1">link</button></a> 
@@ -137,13 +144,6 @@ Argentine Presidentialism: From Crisis to Recomposition of Presidential Power, 2
 <br>
 
 <h1> Under Review / Bajo Revisión </h1>
-
-<p>
-The Pink Tide and Inequality in Latin America (with P. Larroulet, W. Long, and N. Lustig) (Conditionally Accepted, <i>Latin American Politics & Society</i>)
-<p id="one">
-<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
-<p/>
-
   
 <p>
 Struggling in Times of Affluence: Land Conflict during the Paraguayan Soybean Boom (with R. Duarte, J. Mangonet, and M. V. Murillo) 
