--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@ Actualmente soy investigador asociado del <em><a href=http://cpd.berkeley.edu ti
 <p>
 The Pink Tide and Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, forthcoming
 <p id="one">
-<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">link</button></a> 
+<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">first version</button></a> 
 <p/>
 
   
 <p>
 When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, with A. Lucardi, <i> Journal of Elections, Public Opinion and Parties</i>, forthcoming
 <p id="one">
-<!-- <a href="https://www.sciencedirect.com/science/article/pii/S026137942100130X?dgcid=author" target="_blank" class="button button1"> <button class="button button1">link</button></a> 
- -->
+<a href="https://www.tandfonline.com/doi/abs/10.1080/17457289.2022.2081696?journalCode=fbep20" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <a href="when_the_partisan.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 </p>
 
