--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ When the Partisan Becomes Personal: Mayoral Incumbency Effects in Buenos Aires, 
 <a href="https://www.tandfonline.com/doi/abs/10.1080/17457289.2022.2081696?journalCode=fbep20" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <a href="when_the_partisan.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 </p>
-
+  
 <p>
 Does the Monetary Cost of Abstaining Increase Turnout? Causal Evidence from Peru, with G. Tuñón and G. Julcarimna-Alvarez, <i>Electoral Studies</i>, Volume 75, February 2022
 <p id="one">
@@ -130,6 +130,7 @@ How Mayors Hurt Their Presidential Ticket: Party Brands and Incumbency Spillover
 When Do the Wealthy Support Redistribution? Inequality Aversion in Buenos Aires, with L. Schiumerini and S. Stokes, <i>British Journal of Political Science</i>, 2020 
 <p id="one">
 <a href="https://www.cambridge.org/core/journals/british-journal-of-political-science/article/when-do-the-wealthy-support-redistribution-inequality-aversion-in-buenos-aires/FA1E9E1AF6D469601D33E0207228DC74" target="_blank" class="button button1"><button class="button button1">link</button></a> 
+<a<button class="button button4">summary</button></a><a href="when_do_the_wealthy.pdf" target="_blank"></a>  
 <a href="https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/THXYMC" target="_blank"><button class="button button2">replication files</button></a>
 <a href="when_do_the_wealthy_support_redistribution_inequality_aversion_in_buenos_aires.pdf" target="_blank"><button class="button button3">local PDF</button></a>
 </p>
