--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ I conduct theoretical and empirical research on political economy, with a focus 
 <p/>
 
 <p> 
-I received my PhD in Political Science (with Departmental and University Distinction) from Yale University in 2017. Before returning to Argentina, I was also a Postdoctoral Associate at Duke University. 
+I received my PhD in Political Science from Yale University in 2017. Before returning to Argentina, I was also a Postdoctoral Associate at Duke University. 
 <p/>
 
 <p> 
