--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo en la 
 
 
 <p>
-Mis investigaciones se enfocan en la economía política de las democracias en desarrollo, con énfasis en los procesos de rendición de cuentas y las causas y consecuencias políticas de la desigualdad económica.
+Mis investigaciones se enfocan en la economía política de las democracias en desarrollo, con énfasis en los procesos de rendición de cuentas y en las causas y consecuencias políticas de la desigualdad económica.
 <p/>
 
 <p>
-Recibí mi doctorado en Ciencia Política (con distinción) de la Universidad de Yale en 2017. Antes de regresar a Argentina, fui Investigador Postdoctoral en la Universidad de Duke.
+Recibí mi doctorado en Ciencia Política de la Universidad de Yale en 2017. Antes de regresar a Argentina, fui Investigador Postdoctoral en la Universidad de Duke.
 <p/>
 
 <p>
