--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <br>
 
-Thank you for visiting my website. I am an assistant professor at <a href=https://www.udesa.edu.ar title="UdeSA Uiversity">Universidad de San Andrés</a> in Buenos Aires, Argentina.</br>
+Thank you for visiting my website. I am an assistant professor and Director of the <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Master in Public Policy</a> at <a href=https://www.udesa.edu.ar title="UdeSA Uiversity">Universidad de San Andrés</a> in Buenos Aires, Argentina.</br>
 
 
 <p>
@@ -61,7 +61,9 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
   
 <br>
 
-Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina.</br>
+Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo y Director de la <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Maestría en Políticas Públicas</a> en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina</br>
+
+
 
 
 <p>
