--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ I am currently a research associate for the <a href=http://cpd.berkeley.edu titl
   
 <br>
 
-Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo y Director de la <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Maestría en Políticas Públicas</a> en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina</br>
+Gracias por visitar mi sitio web. Soy profesor adjunto de tiempo completo y Director de la <a href=https://udesa.edu.ar/departamento-de-ciencias-sociales/maestria-en-administracion-y-politicas-publicas title="MAPP">Maestría en Políticas Públicas</a> en la <a href=https://www.udesa.edu.ar title="Universidad UdeSA">Universidad de San Andrés</a> en Buenos Aires, Argentina.</br>
 
 
 
