--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Gracias por visitar mi sitio web. Soy profesor asociado de Ciencias Sociales y E
 Mis investigaciones se enfocan en las instituciones políticas y la economía política del desarrollo. <a href=research.html title="research">Acá</a> podés encontrar una lista de mis artículos. 
 <p/>
 <p>
-Recibí mi doctorado en Ciencia Política por la Universidad de Yale. Podés consultar mi CV <a href="Feierherd CV_short.pdf" title="CV">acá</a>. 
+Recibí mi doctorado en ciencia política por la Universidad de Yale. Podés consultar mi CV <a href="Feierherd CV_short.pdf" title="CV">acá</a>. 
 <p/>
 
 
