--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1 id="german-feierherd" style="text-align:center"><b> Germ&#225n Feierherd </b> </h6>
 <p id="two" style="text-align:center"> <a>&#10064; </a> <a href="Feierherd CV_short.pdf"> CV</a> | <a> &#9993; </a> <a href=
   "mailto: gfeierherd@udesa.edu.ar"
-  >Mail</a> |  <a> &#9998;  </a> <a href="research.html">Research</a> | <a> &#9783; </a> <a href="research.html">Code & Data</a><p/>
+  >Mail</a> |  <a> &#9998;  </a> <a href="research.html">Research & Writing </a><p/>
 
 <div class="main">
 
