--- a/research.html
+++ b/research.html
@@ -30,9 +30,9 @@
 <h2>Peer-Reviewed / Revisados por Pares</h1>
 
 <p>
-The Pink Tide and Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, forthcoming
+The Pink Tide and Income Inequality in Latin America, with P. Larroulet, W. Long, and N. Lustig, <i>Latin American Politics & Society</i>, forthcoming
 <p id="one">
-<a href="http://repec.tulane.edu/RePEc/ceq/ceq105.pdf" target="_blank" class="button button1"><button class="button button1">first version</button></a> 
+<a href="https://doi.org/10.1017/lap.2022.47" target="_blank" class="button button1"> <button class="button button1">link</button></a>
 <p/>
 
   
